fix photos height on small screens

--- a/src/styles/photos.scss
+++ b/src/styles/photos.scss
@@ -19,20 +19,28 @@
   &--left {
     .photos__img {
       &:first-child {
-        width: calc(67% - 10px);
+        width: calc(67% - #{$photos-gap});
       }
       &:last-child {
-        width: calc(33% - 10px);
+        width: calc(33% - #{$photos-gap});
       }
     }
   }
 
   &--right {
     .photos__img:first-child {
-      width: calc(33% - 10px);
+      width: calc(33% - #{$photos-gap});
     }
     .photos__img:last-child {
-      width: calc(67% - 10px);
+      width: calc(67% - #{$photos-gap});
+    }
+  }
+}
+
+@media (max-width: $small-screen-breakpoint) {
+  .photos {
+    &__img {
+      height: 60vh;
     }
   }
 }
