--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -7,3 +7,4 @@ $odd-bgcolor: #eee;
 $hover-duration-short: 0.3s;
 $hover-duration-long: 0.6s;
 $small-screen-breakpoint: 999px;
+$photos-gap: 10px;
